@@ -1,3 +1,8 @@
+2012-08-22  Joseph Myers  <joseph@codesourcery.com>
+
+	* gdb.arch/thumb-bx-pc.S: New file.
+	* gdb.arch/thumb-bx-pc.exp: New file.
+
 2012-08-22  Tom Tromey  <tromey@redhat.com>
 
 	* gdb.base/maint.exp: Update.
