@@ -1,3 +1,8 @@
+2012-08-22  Joseph Myers  <joseph@codesourcery.com>
+
+	* arm-tdep.c (thumb_get_next_pc_raw): Mask off low bits for bx pc
+	and blx pc.
+
 2012-08-22  Khoo Yit Phang <khooyp@cs.umd.edu>
 
 	Add a new "python-interactive" command that starts a standard
